objects/Event__c.object
<CustomObject>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Event</fullName>
                </value>
                <value>
                    <fullName>Internal Event</fullName>
                </value>
                <value>
                    <fullName>Launch Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>User Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <formula>Venue__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_State__c</fullName>
        <formula>Venue__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Vision__c</fullName>
        <label>Event Vision</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Map_to_Venue__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;+ Venue_Street_Address_1__c + &quot;, &quot; + Venue_City__c + &quot;, &quot; + Venue_State__c + &quot; &quot; +  Venue_Postal_Code__c + &quot; &quot; +  Venue_Country__c , &quot;Google Map&quot;, &quot;_blank&quot;)</formula>
        <label>Map to Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Evaluation__c</fullName>
        <description>Enter Event Evaluation Score post-Event (1-5, with 5 as the highest). Average of Session Rating.</description>
        <label>Event Evaluation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Vendor Account primarily responsible for managing this event</description>
        <inlineHelpText>Select an Account with the Type = &apos;Event Vendor&apos; for this event.</inlineHelpText>
        <label>Event Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>